--- a/sections/timeline.html
+++ b/sections/timeline.html
@@ -1,41 +1,49 @@
-<!-- Timeline Section -->
-<section id="timeline" class="py-5 bg-light">
+<!-- TIMELINE SECTION -->
+<section id="timeline" class="timeline-section">
   <div class="container">
-    <h2 class="timeline-heading text-center text-primary mb-5">
-      Formal & Professional
-    </h2>
+    
+    <!-- Section Heading -->
+    <h2 class="timeline-title">Formal & Professional</h2>
 
-    <div class="timeline-horizontal d-flex flex-wrap justify-content-center">
+    <!-- Timeline Wrapper -->
+    <div class="timeline-wrapper">
       
       <!-- Item 1 -->
-      <div class="timeline-card border-top border-4 border-primary">
-        <h3 class="fs-5 fw-semibold text-primary mb-1">Laravel Developer</h3>
-        <small class="text-muted d-block mb-2">Swipewire Technologies<br>Aug 2023 – Present</small>
-        <p class="text-secondary mb-0">
-          Building scalable Laravel apps, integrating APIs, optimizing MySQL queries, ensuring performance & security.
-        </p>
+      <div class="timeline-step">
+        <div class="timeline-icon">💻</div>
+        <div class="timeline-card">
+          <h3>Laravel Developer</h3>
+          <small>Swipewire Technologies<br>Aug 2023 – Present</small>
+          <p>
+            Building scalable Laravel apps, integrating APIs, optimizing MySQL queries, ensuring performance & security.
+          </p>
+        </div>
       </div>
 
       <!-- Item 2 -->
-      <div class="timeline-card border-top border-4 border-purple">
-        <h3 class="fs-5 fw-semibold text-purple mb-1">PHP Developer</h3>
-        <small class="text-muted d-block mb-2">SocialBytes Technologies<br>Apr 2021 – Jul 2023</small>
-        <p class="text-secondary mb-0">
-          Developed web apps with PHP & Laravel, optimized SQL queries, built authentication & API integrations.
-        </p>
+      <div class="timeline-step">
+        <div class="timeline-icon">🚀</div>
+        <div class="timeline-card">
+          <h3>PHP Developer</h3>
+          <small>SocialBytes Technologies<br>Apr 2021 – Jul 2023</small>
+          <p>
+            Developed web apps with PHP & Laravel, optimized SQL queries, built authentication & API integrations.
+          </p>
+        </div>
       </div>
 
       <!-- Item 3 -->
-      <div class="timeline-card border-top border-4 border-danger">
-        <h3 class="fs-5 fw-semibold text-danger mb-1">B.E. in ISE</h3>
-        <small class="text-muted d-block mb-2">Sambhram Institute of Technology<br>2016 – 2020</small>
-        <p class="text-secondary mb-0">
-          Specialized in software engineering, databases, and system design at VTU, Bengaluru.
-        </p>
+      <div class="timeline-step">
+        <div class="timeline-icon">🎓</div>
+        <div class="timeline-card">
+          <h3>B.E. in ISE</h3>
+          <small>Sambhram Institute of Technology<br>2016 – 2020</small>
+          <p>
+            Specialized in software engineering, databases, and system design at VTU, Bengaluru.
+          </p>
+        </div>
       </div>
 
     </div>
   </div>
 </section>
-
-
