--- a/sections/skills.html
+++ b/sections/skills.html
@@ -1,80 +1,102 @@
-<!-- Skills Section -->
-<section id="skills" class="position-relative py-5 px-3 bg-light overflow-hidden">
+<!-- SKILLS SECTION -->
+<section id="skills" class="skills-section">
+  <div class="container">
 
-  <!-- Floating background shapes -->
-  <div class="position-absolute top-0 start-0 translate-middle rounded-circle blur-slow bg-primary bg-opacity-25"></div>
-  <div class="position-absolute bottom-0 end-0 translate-middle rounded-circle blur-slow bg-purple bg-opacity-25"></div>
+    <!-- Section Title -->
+    <h2 class="skills-title">🚀 Tech Stack</h2>
+    <p class="skills-subtitle">
+      A blend of backend mastery and full-stack exploration.
+    </p>
 
-  <!-- Section Heading -->
-  <h2 class="display-4 fw-bold text-center text-gradient mb-5 fade-in">
-    Tech Stack
-  </h2>
+    <!-- Looping Skills -->
+    <div class="skills-loop">
+      <div class="skills-track">
 
-  <!-- Skills Loop -->
-  <div class="skills-container overflow-hidden">
-    <div class="skills-loop d-flex gap-4">
+        <!-- PHP -->
+        <div class="skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP">
+          <h3>PHP</h3>
+        </div>
 
-      <!-- Skill Cards -->
-      <div class="skill-card card text-center shadow-lg p-4">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" class="mx-auto mb-3" width="50" alt="PHP">
-        <h3 class="h5 fw-bold text-primary">PHP</h3>
+        <!-- Laravel -->
+        <div class="skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg" alt="Laravel">
+          <h3>Laravel</h3>
+        </div>
+
+        <!-- MySQL -->
+        <div class="skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL">
+          <h3>MySQL</h3>
+        </div>
+
+        <!-- JavaScript -->
+        <div class="skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
+          <h3>JavaScript</h3>
+        </div>
+
+        <!-- React -->
+        <div class="skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React">
+          <h3>React.js</h3>
+        </div>
+
+        <!-- Node.js -->
+        <div class="skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js">
+          <h3>Node.js</h3>
+        </div>
+
+        <!-- Express -->
+        <div class="skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" alt="Express.js">
+          <h3>Express.js</h3>
+        </div>
+
+        <!-- REST API -->
+        <div class="skill-item">
+          <img src="https://cdn-icons-png.flaticon.com/512/779/779549.png" alt="REST API">
+          <h3>REST API</h3>
+        </div>
+
+        <!-- Git -->
+        <div class="skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git">
+          <h3>Git</h3>
+        </div>
+
+        <!-- Jira -->
+        <div class="skill-item">
+          <img src="https://cdn-icons-png.flaticon.com/512/5968/5968875.png" alt="Jira">
+          <h3>Jira</h3>
+        </div>
+
+        <!-- VS Code -->
+        <div class="skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" alt="VS Code">
+          <h3>VS Code</h3>
+        </div>
+
+        <!-- Linux -->
+        <div class="skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" alt="Linux">
+          <h3>Linux</h3>
+        </div>
+
+        <!-- Duplicate all again for smooth loop -->
+        <div class="skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP">
+          <h3>PHP</h3>
+        </div>
+        <div class="skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg" alt="Laravel">
+          <h3>Laravel</h3>
+        </div>
+        <!-- repeat others... -->
+
       </div>
-
-      <div class="skill-card card text-center shadow-lg p-4">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg" class="mx-auto mb-3" width="50" alt="Laravel">
-        <h3 class="h5 fw-bold text-danger">Laravel</h3>
-      </div>
-
-      <div class="skill-card card text-center shadow-lg p-4">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" class="mx-auto mb-3" width="50" alt="MySQL">
-        <h3 class="h5 fw-bold text-warning">MySQL</h3>
-      </div>
-
-      <div class="skill-card card text-center shadow-lg p-4">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="mx-auto mb-3" width="50" alt="JavaScript">
-        <h3 class="h5 fw-bold text-warning">JavaScript</h3>
-      </div>
-
-      <div class="skill-card card text-center shadow-lg p-4">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" class="mx-auto mb-3" width="50" alt="React.js">
-        <h3 class="h5 fw-bold text-info">React.js</h3>
-      </div>
-
-      <div class="skill-card card text-center shadow-lg p-4">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" class="mx-auto mb-3" width="50" alt="Node.js">
-        <h3 class="h5 fw-bold text-success">Node.js</h3>
-      </div>
-
-      <div class="skill-card card text-center shadow-lg p-4">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" class="mx-auto mb-3" width="50" alt="Express.js">
-        <h3 class="h5 fw-bold text-primary">Express.js</h3>
-      </div>
-
-      <div class="skill-card card text-center shadow-lg p-4">
-        <img src="https://cdn-icons-png.flaticon.com/512/779/779549.png" class="mx-auto mb-3" width="50" alt="REST API">
-        <h3 class="h5 fw-bold text-primary">REST API</h3>
-      </div>
-
-      <div class="skill-card card text-center shadow-lg p-4">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" class="mx-auto mb-3" width="50" alt="Git">
-        <h3 class="h5 fw-bold text-danger">Git</h3>
-      </div>
-
-      <div class="skill-card card text-center shadow-lg p-4">
-        <img src="https://cdn-icons-png.flaticon.com/512/5968/5968875.png" class="mx-auto mb-3" width="50" alt="Jira">
-        <h3 class="h5 fw-bold text-warning">Jira</h3>
-      </div>
-
-      <!-- Duplicate set for seamless loop -->
-      <div class="skill-card card text-center shadow-lg p-4">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" class="mx-auto mb-3" width="50" alt="PHP">
-        <h3 class="h5 fw-bold text-primary">PHP</h3>
-      </div>
-      <div class="skill-card card text-center shadow-lg p-4">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg" class="mx-auto mb-3" width="50" alt="Laravel">
-        <h3 class="h5 fw-bold text-danger">Laravel</h3>
-      </div>
-      <!-- (repeat others as needed) -->
     </div>
+
   </div>
 </section>
