--- a/sections/testimonials.html
+++ b/sections/testimonials.html
@@ -1,67 +1,77 @@
-<!-- Testimonials Section -->
-<section id="testimonials" class="position-relative py-5 px-3 bg-light overflow-hidden">
-  <!-- Background Shapes -->
-  <div class="position-absolute top-0 start-0 translate-middle bg-primary bg-opacity-25 rounded-circle blur-shape"></div>
-  <div class="position-absolute bottom-0 end-0 translate-middle bg-purple bg-opacity-25 rounded-circle blur-shape-lg"></div>
+<!-- TESTIMONIALS SECTION -->
+<section id="testimonials" class="testimonials-section">
+  <div class="container">
 
-  <!-- Section Heading -->
-  <h2 class="display-4 fw-bold text-center text-primary mb-5 fade-in">Stories of Impact</h2>
+    <!-- Heading -->
+    <h2 class="testimonials-title">✨ Stories of Impact</h2>
+    <p class="testimonials-subtitle">What colleagues & clients say about me</p>
 
-  <!-- Looping Testimonials -->
-  <div class="overflow-hidden position-relative">
-    <div class="d-flex gap-4 loop-track">
+    <!-- Testimonials Carousel -->
+    <div class="testimonials-carousel">
+      <div class="testimonials-track">
 
-      <!-- Testimonial -->
-      <div class="testimonial-card card shadow-lg p-4 text-center">
-        <img src="https://i.pravatar.cc/100?img=12" alt="Chethan Evil Das" class="testimonial-img">
-        <p class="fst-italic">“A dedicated developer who always delivers high-quality work.”</p>
-        <div class="mt-3 fw-semibold text-primary">— Chethan Evil Das (HR Manager @SocialBytes)</div>
+        <!-- Card 1 -->
+        <div class="testimonial-card">
+          <img src="https://i.pravatar.cc/120?img=12" alt="Chethan Evil Das" class="testimonial-img">
+          <p class="testimonial-text">“A dedicated developer who always delivers high-quality work.”</p>
+          <h4 class="testimonial-name">Chethan Evil Das</h4>
+          <span class="testimonial-role">HR Manager @SocialBytes</span>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="testimonial-card">
+          <img src="https://i.pravatar.cc/120?img=13" alt="Ajay" class="testimonial-img">
+          <p class="testimonial-text">“Very strong in backend development and database optimization.”</p>
+          <h4 class="testimonial-name">Ajay</h4>
+          <span class="testimonial-role">Team Lead @SocialBytes</span>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="testimonial-card">
+          <img src="https://i.pravatar.cc/120?img=14" alt="Manoj" class="testimonial-img">
+          <p class="testimonial-text">“Professional, reliable, and highly skilled developer.”</p>
+          <h4 class="testimonial-name">Manoj</h4>
+          <span class="testimonial-role">Client @IntelliSpace</span>
+        </div>
+
+        <!-- Card 4 -->
+        <div class="testimonial-card">
+          <img src="https://i.pravatar.cc/120?img=15" alt="Girish" class="testimonial-img">
+          <p class="testimonial-text">“Excellent communication and timely delivery.”</p>
+          <h4 class="testimonial-name">Girish</h4>
+          <span class="testimonial-role">Team Lead @SocialBytes</span>
+        </div>
+
+        <!-- Duplicate Set (for infinite loop) -->
+        <div class="testimonial-card">
+          <img src="https://i.pravatar.cc/120?img=12" alt="Chethan Evil Das" class="testimonial-img">
+          <p class="testimonial-text">“A dedicated developer who always delivers high-quality work.”</p>
+          <h4 class="testimonial-name">Chethan Evil Das</h4>
+          <span class="testimonial-role">HR Manager @SocialBytes</span>
+        </div>
+
+        <div class="testimonial-card">
+          <img src="https://i.pravatar.cc/120?img=13" alt="Ajay" class="testimonial-img">
+          <p class="testimonial-text">“Very strong in backend development and database optimization.”</p>
+          <h4 class="testimonial-name">Ajay</h4>
+          <span class="testimonial-role">Team Lead @SocialBytes</span>
+        </div>
+
+        <div class="testimonial-card">
+          <img src="https://i.pravatar.cc/120?img=14" alt="Manoj" class="testimonial-img">
+          <p class="testimonial-text">“Professional, reliable, and highly skilled developer.”</p>
+          <h4 class="testimonial-name">Manoj</h4>
+          <span class="testimonial-role">Client @IntelliSpace</span>
+        </div>
+
+        <div class="testimonial-card">
+          <img src="https://i.pravatar.cc/120?img=15" alt="Girish" class="testimonial-img">
+          <p class="testimonial-text">“Excellent communication and timely delivery.”</p>
+          <h4 class="testimonial-name">Girish</h4>
+          <span class="testimonial-role">Team Lead @SocialBytes</span>
+        </div>
+
       </div>
-
-      <div class="testimonial-card card shadow-lg p-4 text-center">
-        <img src="https://i.pravatar.cc/100?img=13" alt="Ajay" class="testimonial-img">
-        <p class="fst-italic">“Very strong in backend development and database optimization.”</p>
-        <div class="mt-3 fw-semibold text-primary">— Ajay (Team Lead @SocialBytes)</div>
-      </div>
-
-      <div class="testimonial-card card shadow-lg p-4 text-center">
-        <img src="https://i.pravatar.cc/100?img=14" alt="Manoj" class="testimonial-img">
-        <p class="fst-italic">“Professional, reliable, and highly skilled developer.”</p>
-        <div class="mt-3 fw-semibold text-primary">— Manoj (Client @IntelliSpace)</div>
-      </div>
-
-      <div class="testimonial-card card shadow-lg p-4 text-center">
-        <img src="https://i.pravatar.cc/100?img=15" alt="Girish" class="testimonial-img">
-        <p class="fst-italic">“Excellent communication and timely delivery.”</p>
-        <div class="mt-3 fw-semibold text-primary">— Girish (Team Lead @SocialBytes)</div>
-      </div>
-
-     <div class="testimonial-card card shadow-lg p-4 text-center">
-        <img src="https://i.pravatar.cc/100?img=12" alt="Chethan Evil Das" class="testimonial-img">
-        <p class="fst-italic">“A dedicated developer who always delivers high-quality work.”</p>
-        <div class="mt-3 fw-semibold text-primary">— Chethan Evil Das (HR Manager @SocialBytes)</div>
-      </div>
-
-      <div class="testimonial-card card shadow-lg p-4 text-center">
-        <img src="https://i.pravatar.cc/100?img=13" alt="Ajay" class="testimonial-img">
-        <p class="fst-italic">“Very strong in backend development and database optimization.”</p>
-        <div class="mt-3 fw-semibold text-primary">— Ajay (Team Lead @SocialBytes)</div>
-      </div>
-
-      <div class="testimonial-card card shadow-lg p-4 text-center">
-        <img src="https://i.pravatar.cc/100?img=14" alt="Manoj" class="testimonial-img">
-        <p class="fst-italic">“Professional, reliable, and highly skilled developer.”</p>
-        <div class="mt-3 fw-semibold text-primary">— Manoj (Client @IntelliSpace)</div>
-      </div>
-
-      <div class="testimonial-card card shadow-lg p-4 text-center">
-        <img src="https://i.pravatar.cc/100?img=15" alt="Girish" class="testimonial-img">
-        <p class="fst-italic">“Excellent communication and timely delivery.”</p>
-        <div class="mt-3 fw-semibold text-primary">— Girish (Team Lead @SocialBytes)</div>
-      </div>
-
     </div>
   </div>
 </section>
-
-
