--- a/sections/contact.html
+++ b/sections/contact.html
@@ -1,62 +1,56 @@
-<section id="contact" class="py-5 px-3 position-relative bg-light overflow-hidden">
-  <!-- Background shapes -->
-  <div class="position-absolute top-0 start-0 translate-middle bg-primary rounded-circle opacity-25 blur-shape float-slow" style="width: 18rem; height: 18rem;"></div>
-  <div class="position-absolute bottom-0 end-0 translate-middle bg-purple rounded-circle opacity-25 blur-shape float-slow" style="width: 24rem; height: 24rem; animation-delay: 1s;"></div>
-
-  <!-- Title -->
-  <h2 class="display-5 fw-bold text-primary text-center mb-5 animate-fadeInUp">
-    Stay Connected
-  </h2>
-
-  <!-- Social Icons -->
-  <div class="d-flex justify-content-center gap-3 mb-5">
-    <a href="https://x.com/SumanKS81840" target="_blank" aria-label="Twitter" title="Twitter" class="social-icon"><i class="bi bi-twitter"></i></a>
-    <a href="https://www.linkedin.com/in/suman-k-s-a55868184/" target="_blank" aria-label="LinkedIn" title="LinkedIn" class="social-icon"><i class="bi bi-linkedin"></i></a>
-    <a href="https://github.com/backendlegion91" target="_blank" aria-label="GitHub" title="GitHub" class="social-icon"><i class="bi bi-github"></i></a>
-  </div>
-
-  <!-- Contact Options & Map -->
+<!-- CONTACT SECTION -->
+<section id="contact" class="contact-section">
   <div class="container">
-    <div class="row g-4">
+
+    <!-- Heading -->
+    <h2 class="contact-title">📬 Stay Connected</h2>
+    <p class="contact-subtitle">Feel free to reach out for collaborations, opportunities, or just a chat.</p>
+
+    <div class="row g-4 align-items-center">
       
-      <!-- Contact Options -->
+      <!-- Contact Info -->
       <div class="col-lg-6">
-        <div class="p-4 rounded-4 shadow bg-white animate-fadeInUp h-100">
-          <h3 class="h4 fw-bold text-primary mb-4">Get in Touch</h3>
+        <div class="contact-card glass-card shadow-lg p-4">
+          <h3 class="h4 fw-bold text-gradient mb-4">Let’s Talk</h3>
 
           <div class="d-grid gap-3">
-            <!-- Email -->
-            <a href="mailto:backendlegion91@gmail.com" class="btn btn-gradient d-flex align-items-center gap-2 btn-email">
+            <a href="mailto:backendlegion91@gmail.com" class="contact-btn email">
               <i class="bi bi-envelope-fill"></i> Email Me
             </a>
-            <!-- WhatsApp -->
-            <a href="https://wa.me/7996049769" target="_blank" class="btn btn-success text-white d-flex align-items-center gap-2 btn-whatsapp">
+            <a href="https://wa.me/7996049769" target="_blank" class="contact-btn whatsapp">
               <i class="bi bi-whatsapp"></i> WhatsApp
             </a>
-            <!-- Phone -->
-            <a href="tel:+7996049769" class="btn btn-primary text-white d-flex align-items-center gap-2 btn-phone">
+            <a href="tel:+7996049769" class="contact-btn phone">
               <i class="bi bi-telephone-fill"></i> Call Me
             </a>
-            <!-- LinkedIn -->
-            <a href="https://www.linkedin.com/in/suman-k-s-a55868184/" target="_blank" class="btn btn-info text-white d-flex align-items-center gap-2 btn-linkedin">
+            <a href="https://www.linkedin.com/in/suman-k-s-a55868184/" target="_blank" class="contact-btn linkedin">
               <i class="bi bi-linkedin"></i> LinkedIn
             </a>
+          </div>
+
+          <!-- Social Icons -->
+          <div class="social-links mt-4 d-flex gap-3">
+            <a href="https://x.com/SumanKS81840" target="_blank" aria-label="Twitter"><i class="bi bi-twitter"></i></a>
+            <a href="https://github.com/backendlegion91" target="_blank" aria-label="GitHub"><i class="bi bi-github"></i></a>
+            <a href="https://www.linkedin.com/in/suman-k-s-a55868184/" target="_blank" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
       </div>
 
-      <!-- Map & Address -->
-      <div class="col-lg-6 animate-fadeInScale">
-        <p class="text-muted fw-semibold text-center text-lg-start mb-3">
-          📍 HSR Layout, Bangalore, Karnataka, India
-        </p>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.8895805881457!2d77.63335691524039!3d12.910953719741388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae15d087f8894f%3A0x60c9a608d048e2e2!2sHSR%20Layout%2C%20Bengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1693578200000!5m2!1sen!2sin"
-          width="100%" height="350" class="rounded-4 shadow border-0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+      <!-- Google Map -->
+      <div class="col-lg-6">
+        <div class="map-container shadow-lg rounded-4">
+          <p class="fw-semibold text-muted mb-2">
+            📍 HSR Layout, Bangalore, Karnataka, India
+          </p>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.8895805881457!2d77.63335691524039!3d12.910953719741388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae15d087f8894f%3A0x60c9a608d048e2e2!2sHSR%20Layout%2C%20Bengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1693578200000!5m2!1sen!2sin"
+            width="100%" height="350" class="rounded-4 border-0"
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
       </div>
+
     </div>
   </div>
 </section>
-
-
