--- a/sections/contact.html
+++ b/sections/contact.html
@@ -1,19 +1,19 @@
 <!-- CONTACT SECTION -->
-<section id="contact" class="contact-section">
+<section id="contact" class="contact-section py-5">
   <div class="container">
 
     <!-- Heading -->
-    <h2 class="contact-title">📬 Stay Connected</h2>
-    <p class="contact-subtitle">Feel free to reach out for collaborations, opportunities, or just a chat.</p>
+    <h2 class="contact-title text-center mb-2">📬 Stay Connected</h2>
+    <p class="contact-subtitle text-center mb-5">Feel free to reach out for collaborations, opportunities, or just a chat.</p>
 
-    <div class="row g-4 align-items-center">
+    <div class="row g-4 align-items-center justify-content-center">
       
-      <!-- Contact Info -->
+      <!-- Contact Info Card -->
       <div class="col-lg-6">
-        <div class="contact-card glass-card shadow-lg p-4">
+        <div class="contact-card glass-card shadow-lg p-4 text-center">
           <h3 class="h4 fw-bold text-gradient mb-4">Let’s Talk</h3>
 
-          <div class="d-grid gap-3">
+          <div class="d-grid gap-3 mb-3">
             <a href="mailto:backendlegion91@gmail.com" class="contact-btn email">
               <i class="bi bi-envelope-fill"></i> Email Me
             </a>
@@ -29,7 +29,7 @@
           </div>
 
           <!-- Social Icons -->
-          <div class="social-links mt-4 d-flex gap-3">
+          <div class="social-links mt-3 d-flex justify-content-center gap-3">
             <a href="https://x.com/SumanKS81840" target="_blank" aria-label="Twitter"><i class="bi bi-twitter"></i></a>
             <a href="https://github.com/backendlegion91" target="_blank" aria-label="GitHub"><i class="bi bi-github"></i></a>
             <a href="https://www.linkedin.com/in/suman-k-s-a55868184/" target="_blank" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
@@ -39,8 +39,8 @@
 
       <!-- Google Map -->
       <div class="col-lg-6">
-        <div class="map-container shadow-lg rounded-4">
-          <p class="fw-semibold text-muted mb-2">
+        <div class="contact-card glass-card shadow-lg p-4 text-center">
+          <p class="fw-semibold text-muted mb-2 text-center">
             📍 HSR Layout, Bangalore, Karnataka, India
           </p>
           <iframe
