--- a/sections/skills.html
+++ b/sections/skills.html
@@ -1,100 +1,63 @@
 <!-- SKILLS SECTION -->
-<section id="skills" class="skills-section">
-  <div class="container">
+<section id="skills" class="skills-section py-5">
+  <div class="container text-center">
 
     <!-- Section Title -->
-    <h2 class="skills-title">🚀 Tech Stack</h2>
-    <p class="skills-subtitle">
-      A blend of backend mastery and full-stack exploration.
-    </p>
+    <h2 class="skills-title mb-2">🚀 Tech Stack</h2>
+    <p class="skills-subtitle mb-4">A blend of backend mastery and full-stack exploration.</p>
 
-    <!-- Looping Skills -->
-    <div class="skills-loop">
+    <!-- Skills Carousel -->
+    <div class="skills-carousel">
       <div class="skills-track">
-
-        <!-- PHP -->
+        <!-- Skill Items -->
         <div class="skill-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP">
           <h3>PHP</h3>
         </div>
-
-        <!-- Laravel -->
         <div class="skill-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg" alt="Laravel">
           <h3>Laravel</h3>
         </div>
-
-        <!-- MySQL -->
         <div class="skill-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL">
           <h3>MySQL</h3>
         </div>
-
-        <!-- JavaScript -->
         <div class="skill-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
           <h3>JavaScript</h3>
         </div>
-
-        <!-- React -->
         <div class="skill-item">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React.js">
           <h3>React.js</h3>
         </div>
-
-        <!-- Node.js -->
         <div class="skill-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js">
           <h3>Node.js</h3>
         </div>
-
-        <!-- Express -->
         <div class="skill-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" alt="Express.js">
           <h3>Express.js</h3>
         </div>
-
-        <!-- REST API -->
         <div class="skill-item">
           <img src="https://cdn-icons-png.flaticon.com/512/779/779549.png" alt="REST API">
           <h3>REST API</h3>
         </div>
-
-        <!-- Git -->
         <div class="skill-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git">
           <h3>Git</h3>
         </div>
-
-        <!-- Jira -->
         <div class="skill-item">
           <img src="https://cdn-icons-png.flaticon.com/512/5968/5968875.png" alt="Jira">
           <h3>Jira</h3>
         </div>
-
-        <!-- VS Code -->
         <div class="skill-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" alt="VS Code">
           <h3>VS Code</h3>
         </div>
-
-        <!-- Linux -->
         <div class="skill-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" alt="Linux">
           <h3>Linux</h3>
         </div>
-
-        <!-- Duplicate all again for smooth loop -->
-        <div class="skill-item">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP">
-          <h3>PHP</h3>
-        </div>
-        <div class="skill-item">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg" alt="Laravel">
-          <h3>Laravel</h3>
-        </div>
-        <!-- repeat others... -->
-
       </div>
     </div>
 
