--- a/sections/timeline.html
+++ b/sections/timeline.html
@@ -1,47 +1,41 @@
 <!-- TIMELINE SECTION -->
-<section id="timeline" class="timeline-section">
+<section id="timeline" class="timeline-section py-5">
   <div class="container">
-    
+
     <!-- Section Heading -->
-    <h2 class="timeline-title">Formal & Professional</h2>
+    <h2 class="timeline-title text-center mb-5">Formal & Professional</h2>
 
-    <!-- Timeline Wrapper -->
+    <!-- Timeline Cards Wrapper -->
     <div class="timeline-wrapper">
-      
-      <!-- Item 1 -->
-      <div class="timeline-step">
+
+      <!-- Step 1 -->
+      <div class="timeline-card">
         <div class="timeline-icon">💻</div>
-        <div class="timeline-card">
-          <h3>Laravel Developer</h3>
-          <small>Swipewire Technologies<br>Aug 2023 – Present</small>
-          <p>
-            Building scalable Laravel apps, integrating APIs, optimizing MySQL queries, ensuring performance & security.
-          </p>
-        </div>
+        <h3>Laravel Developer</h3>
+        <small>Swipewire Technologies<br>Aug 2023 – Present</small>
+        <p>
+          Building scalable Laravel apps, integrating APIs, optimizing MySQL queries, ensuring performance & security.
+        </p>
       </div>
 
-      <!-- Item 2 -->
-      <div class="timeline-step">
+      <!-- Step 2 -->
+      <div class="timeline-card">
         <div class="timeline-icon">🚀</div>
-        <div class="timeline-card">
-          <h3>PHP Developer</h3>
-          <small>SocialBytes Technologies<br>Apr 2021 – Jul 2023</small>
-          <p>
-            Developed web apps with PHP & Laravel, optimized SQL queries, built authentication & API integrations.
-          </p>
-        </div>
+        <h3>PHP Developer</h3>
+        <small>SocialBytes Technologies<br>Apr 2021 – Jul 2023</small>
+        <p>
+          Developed web apps with PHP & Laravel, optimized SQL queries, built authentication & API integrations.
+        </p>
       </div>
 
-      <!-- Item 3 -->
-      <div class="timeline-step">
+      <!-- Step 3 -->
+      <div class="timeline-card">
         <div class="timeline-icon">🎓</div>
-        <div class="timeline-card">
-          <h3>B.E. in ISE</h3>
-          <small>Sambhram Institute of Technology<br>2016 – 2020</small>
-          <p>
-            Specialized in software engineering, databases, and system design at VTU, Bengaluru.
-          </p>
-        </div>
+        <h3>B.E. in ISE</h3>
+        <small>Sambhram Institute of Technology<br>2016 – 2020</small>
+        <p>
+          Specialized in software engineering, databases, and system design at VTU, Bengaluru.
+        </p>
       </div>
 
     </div>
