--- a/sections/projects.html
+++ b/sections/projects.html
@@ -1,47 +1,16 @@
 <!-- PROJECTS SECTION -->
-<section id="projects" class="projects-section">
-  <div class="container">
+<section id="projects" class="projects-section py-5">
+  <div class="container text-center">
 
     <!-- Section Heading -->
-    <h2 class="projects-title">💡 Innovations</h2>
-    <p class="projects-subtitle">Some of the impactful solutions I’ve built.</p>
+    <h2 class="projects-title mb-2">💡 Innovations</h2>
+    <p class="projects-subtitle mb-4">Some of the impactful solutions I’ve built.</p>
 
-    <!-- Looping Projects Carousel -->
+    <!-- Projects Carousel -->
     <div class="projects-carousel">
       <div class="projects-track">
 
-        <!-- Project Cards -->
-        <div class="project-card">
-          <div class="project-icon">🏥</div>
-          <h3>Healthcare Management</h3>
-          <p>Laravel & MySQL app for patient records with Redis caching. Scalable & secure for healthcare institutions.</p>
-        </div>
-
-        <div class="project-card">
-          <div class="project-icon">🏫</div>
-          <h3>Education ERP</h3>
-          <p>Admissions & fee system with Audit Tally API, role-based access, and cron-based fee reminders.</p>
-        </div>
-
-        <div class="project-card">
-          <div class="project-icon">🛒</div>
-          <h3>E-commerce Platform</h3>
-          <p>Laravel store with cart, checkout, PayU, Stripe & Razorpay integration, manual payments & email engine.</p>
-        </div>
-
-        <div class="project-card">
-          <div class="project-icon">🔗</div>
-          <h3>API Integrations</h3>
-          <p>Integrated SMS, Email & Payment APIs with real-time notifications for high-performance apps.</p>
-        </div>
-
-        <div class="project-card">
-          <div class="project-icon">💻</div>
-          <h3>Portfolio Website</h3>
-          <p>Bootstrap site with dark mode, animations & modular UI. Showcases career journey interactively.</p>
-        </div>
-
-        <!-- Duplicate set for seamless infinite loop -->
+        <!-- Project Card -->
         <div class="project-card">
           <div class="project-icon">🏥</div>
           <h3>Healthcare Management</h3>
@@ -74,5 +43,6 @@
 
       </div>
     </div>
+
   </div>
 </section>
