--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/newdesign.css" />
+   <link rel="stylesheet" href="css/newtrend.css" />
   
 </head>
 <body class="bg-light text-dark">
